--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zhaojjiang/vite-plugin-eruda",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A Vite plugin to inject eruda into your project during build.",
   "keywords": [
     "vite",
@@ -26,11 +26,10 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.10",
-    "typescript": "^5.8.2",
-    "vite": ">=5.0.0"
+    "typescript": "^5.8.2"
   },
-  "optionalDependencies": {
-    "eruda": ">=3.0.0"
+  "peerDependencies": {
+    "eruda": "*"
   },
   "publishConfig": {
     "access": "public",
